layout bug fixes

--- a/src/components/dropdown/Dropdown.css
+++ b/src/components/dropdown/Dropdown.css
@@ -1,13 +1,14 @@
 .dropdown{
    display: flex;
+   position: relative;
    flex-direction: column;
    align-items: center;
    z-index: 10; 
-   position: absolute;
 }
 
 .selected-item-cont {
     display: flex;
+    position: relative;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -45,6 +46,7 @@ p {
 
 .option-list {
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
